# jogo_da_velha

./: LICENSE  README.md  app.py  pyproject.toml
